This file should contain a log of all changes to the regression tests,
and the reason for the change.  This could be a change only to the
output (e.g. due to a bugfix); a change to the input (e.g. due to
renaming or obsoleting an input variable); or a change to both
(e.g. due to a substantive change to the mesh or other input files).

7/7/2021
Changed: RMP_nonlin
Reason: The definition of the toroidal current has been reverted to the
	original definition of Jy = - Del^2(psi) (without a factor of
	rzero) in the itor=0 case to make it consistent with the rest of
	the code.  This effectively undoes the change from 1/26/2021.
	The definition of the loop voltage has also been changed in the
	code so that it has dimensions of voltage for itor=0.

1/26/2021
Changed: RMP_nonlin
Reason: Commit 0f769906f corrected the toroidal current diagnostic for
	itor=0.  This change broke RMP_nonlin, which was using vloop
	feedback with values of vloop and tcur based on the previous
	(incorrect) toroidal current diagnostic.  This change updates the
	vloop and tcur values for the controller, and yields a slight
	difference in the C1ke file.

8/26/2020
Changed: KPRAD_2D, KPRAD_restart, pellet
Reason: Bugs were corrected in the velocity and temperature/pressure equations
when impurities are included. This significantly changes the kinetic energy
in all the cases that use KPRAD.

7/20/2020
Changed: adapt
Reason: C1ke now differs from base version consistently on all systems.
Presumably this difference is due to an algorithmic change in the
SCOREC libraries.  Adaptation still seems to work fine, so we're taking
the new version to be the "correct" one now.

12/10/2019
Changed: KPRAD_2D, KPRAD_restart, pellet
Reason: Kinetic energy scalars changed to use mass density (rho),
so changes regression tests that have impurities

8/16/2019
Changed: KPRAD_2D, pellet
Reason: Moved define_transport_coefficients before solve, so a couple changes.