@@ -1,1 +1,1 @@
-       0  0.0000E+00  1.6085E-01  3.6410E-11    0.0000E+00  1.6085E-01  0.0000E+00    4.5726E+00  3.2125E+04  5.9487E+00    3.21367E+04
+       0  0.0000E+00  1.6085E-01  1.5011E-10    0.0000E+00  1.6085E-01  0.0000E+00    4.5714E+00  3.2116E+04  5.9487E+00    3.21267E+04
