@@ -13,17 +13,17 @@ ifeq ($(PAR), 1)
   FOPTS := $(FOPTS) -DUSEPARTICLES
 endif
 
-CC = /usr/local/openmpi/4.1.0/intel20211/bin/mpicc
-CPP = /usr/local/openmpi/4.1.0/intel20211/bin/mpicxx
-F90 =/usr/local/openmpi/4.1.0/intel20211/bin/mpif90
-F77 = /usr/local/openmpi/4.1.0/intel20211/bin/mpif90
-LOADER =/usr/local/openmpi/4.1.0/intel20211/bin/mpif90
+CC = mpiicc
+CPP = mpiicpc
+F90 = mpiifort
+F77 = mpiifort
+LOADER = mpiifort
 LDOPTS := $(LDOPTS) -cxxlib
 F90OPTS = $(F90FLAGS) $(FOPTS) -gen-interfaces
 F77OPTS = $(F77FLAGS) $(FOPTS)
 
 # define where you want to locate the mesh adapt libraries
-MPIVER=intel2021.1.2-openmpi4.1.0
+MPIVER=intel2021.1.2-intelmpi
 PETSC_VER=petsc-3.13.5
 PETSCVER=petsc3.13.5
 PETSC_DIR=/projects/M3DC1/PETSC/$(PETSC_VER)
@@ -35,7 +35,7 @@ else
   M3DC1_SCOREC_LIB=-lm3dc1_scorec
 endif
 
-PETSC_WITH_EXTERNAL_LIB = -L${PETSC_DIR}/${PETSC_ARCH}/lib -Wl,-rpath,${PETSC_DIR}/${PETSC_ARCH}/lib -L${PETSC_DIR}/${PETSC_ARCH}/lib -Wl,-rpath,/usr/local/fftw/intel-2021.1/openmpi-4.1.0/3.3.9/lib -L/usr/local/fftw/intel-2021.1/openmpi-4.1.0/3.3.9/lib -Wl,-rpath,/usr/local/hdf5/intel-2021.1/openmpi-4.1.0/1.10.6/lib64 -L/usr/local/hdf5/intel-2021.1/openmpi-4.1.0/1.10.6/lib64 -L/usr/local/openmpi/4.1.0/intel20211/lib64 -L/usr/local/fftw/intel-2021.1/openmpi-4.1.0/3.3.9/lib64 -L/opt/intel/oneapi/mkl/2021.1.1/lib/intel64 -L/opt/intel/oneapi/tbb/2021.1.1/lib/intel64/gcc4.8 -L/opt/intel/oneapi/compiler/2021.1.2/linux/lib -L/opt/intel/oneapi/compiler/2021.1.2/linux/compiler/lib/intel64_lin -L/usr/lib/gcc/x86_64-redhat-linux/8 -Wl,-rpath,/usr/local/openmpi/4.1.0/intel20211/lib64 -lpetsc -lcmumps -ldmumps -lsmumps -lzmumps -lmumps_common -lpord -lscalapack -lsuperlu -lsuperlu_dist -lfftw3_mpi -lfftw3 -lflapack -lfblas -lzoltan -lX11 -lhdf5hl_fortran -lhdf5_fortran -lhdf5_hl -lhdf5 -lparmetis -lmetis -lz -lstdc++ -ldl -lmpi_usempif08 -lmpi_usempi_ignore_tkr -lmpi_mpifh -lmpi -lifport -lifcoremt_pic -limf -lsvml -lm -lipgo -lirc -lpthread -lgcc_s -lirc_s -lquadmath -lstdc++ -ldl
+PETSC_WITH_EXTERNAL_LIB = -L${PETSC_DIR}/${PETSC_ARCH}/lib -Wl,-rpath,/projects/M3DC1/PETSC/petsc-3.13.5/real-intel2021.1.2-intelmpi/lib -L/projects/M3DC1/PETSC/petsc-3.13.5/real-intel2021.1.2-intelmpi/lib -Wl,-rpath,/usr/local/fftw/intel-19.1/intel-mpi/3.3.9/lib -L/usr/local/fftw/intel-19.1/intel-mpi/3.3.9/lib -Wl,-rpath,/usr/local/hdf5/intel-2021.1/intel-mpi/1.10.6/lib64 -L/usr/local/hdf5/intel-2021.1/intel-mpi/1.10.6/lib64 -L/opt/intel/oneapi/mpi/2021.1.1/lib/release -L/opt/intel/oneapi/mpi/2021.1.1/lib -L/usr/local/fftw/intel-19.1/intel-mpi/3.3.9/lib64 -L/usr/local/gsl/2.6/x86_64/lib64 -L/opt/intel/oneapi/mpi/2021.1.1/libfabric/lib -L/opt/intel/oneapi/mkl/2021.1.1/lib/intel64 -L/opt/intel/oneapi/tbb/2021.1.1/lib/intel64/gcc4.8 -L/opt/intel/oneapi/compiler/2021.1.2/linux/lib -L/opt/intel/oneapi/compiler/2021.1.2/linux/compiler/lib/intel64_lin -L/usr/lib/gcc/x86_64-redhat-linux/8 -Wl,-rpath,/opt/intel/oneapi/mpi/2021.1.1/lib/release -Wl,-rpath,/opt/intel/oneapi/mpi/2021.1.1/lib -lpetsc -lcmumps -ldmumps -lsmumps -lzmumps -lmumps_common -lpord -lscalapack -lsuperlu -lsuperlu_dist -lfftw3_mpi -lfftw3 -lflapack -lfblas -lzoltan -lX11 -lhdf5hl_fortran -lhdf5_fortran -lhdf5_hl -lhdf5 -lparmetis -lmetis -lz -lstdc++ -ldl -lmpifort -lmpi -lrt -lpthread -lifport -lifcoremt_pic -limf -lsvml -lm -lipgo -lirc -lgcc_s -lirc_s -lquadmath -lstdc++ -ldl
 
 SCOREC_BASE_DIR=/projects/M3DC1/scorec/$(MPIVER)/$(PETSCVER)
 SCOREC_UTIL_DIR=$(SCOREC_BASE_DIR)/bin
@@ -52,7 +52,7 @@ SCOREC_LIBS= -L$(SCOREC_DIR)/lib $(M3DC1_SCOREC_LIB) \
              -lpumi -lapf -lapf_zoltan -lgmi -llion -lma -lmds -lmth -lparma \
              -lpcu -lph -lsam -lspr -lcrv -Wl,--end-group
 
-LIBS = 	-L$(OPENMPI_HOME)/lib64 -lmpi_cxx\
+LIBS = 	-L$(I_MPI_ROOT)/lib -lmpicxx\
 	$(SCOREC_LIBS) \
         $(ZOLTAN_LIB) \
         $(PETSC_WITH_EXTERNAL_LIB) \
